# SubmitVII

./: CMakeLists.txt  GUIA_RAPIDA.txt  README.md  binarysearch.cpp  compile.ps1  compile.sh  informe.tex  run_tests.ps1  run_tests.sh  shearsort.cpp
